# Bangboo

./: .discloudignore  .env.example  .gitignore  Cargo.toml  README.md  build.rs  discloud.config  package.json  pnpm-lock.yaml  settings.json  tsconfig.json
data/: colors.ron  constants.json  emojis.json  emojis.ron  fab.json  fab.ron  guild.json  guild.ron  hashes.json
resources/: shortlinks.json
src/: assets.rs  data.rs  env.rs  env.ts  index.ts  main.rs
src/constants/: assets.rs  mod.rs  ron.rs
src/constants/ron/: colors.rs  emojis.rs  fab.rs  guild.rs
src/data/: constants.rs  emojis.rs  fab.rs  guild.rs  mod.rs  settings.rs
src/database/: index.ts
src/discord/: mod.rs
src/discord/app/: base.rs  commands.rs  context.rs  creators.rs  events.rs  mod.rs
src/discord/base/: App.ts  base.app.ts  base.player.ts  base.rs  base.version.ts  constants.ts  creators.rs  index.ts  mod.rs
src/discord/commands/: mod.rs
src/discord/commands/prefix/: canvas.rs  mod.rs  ping.rs
src/discord/commands/private/: emojis.ts  trigger.ts
src/discord/commands/public/: age.rs  age.ts  canvas.rs  canvas.ts  counter.ts  discloud.rs  discloud.ts  fab.rs  fab.ts  mod.rs  moderate.rs  moderate.ts  ping.ts  player.ts  prompt.rs  prompt.ts  social.rs  social.ts
src/discord/commands/public/moderate/: ban.rs  delete_message.rs  filter.rs  kick.rs  mod.rs  modal.rs  moderate.ts  timeout.rs
src/discord/events/: ban-added.ts  ban_add.rs  ban_added.rs  guild.ts  interaction_create.rs  member-added.ts  member-removed.ts  member-update.ts  member_added.rs  member_removed.rs  member_update.rs  message-create.ts  message_create.rs  mod.rs  ready.rs  ready.ts
src/discord/events/global/: member-add.ts  member-added.ts  member-remove.ts  member-removed.ts
src/discord/interaction/commands/: mod.rs
src/discord/responders/: discloud.rs  mod.rs
src/discord/responders/buttons/: discloud.ts
src/discord/responders/modals/: ban.ts  delete-message.ts  kick.ts  timeout.ts
src/discord/responders/moderate/: actions.rs  components.rs  mod.rs  modal.rs
src/functions/: index.ts  malloc.rs  metadata.ts  mod.rs  utils.rs
src/functions/utils/: cdn.rs  components.rs  embed.ts  emoji.ts  emojis.ts  fab.ts  global.rs  global.ts  guild.ts  loggers.rs  metadata.ts  modal-filters.ts  phash.ts
src/helpers/: assets.rs  mod.rs  schemas.rs
src/menus/: index.ts  mod.rs  moderate.rs  moderate.ts
src/menus/V2/: discloud.ts  fab.ts  social.ts
src/menus/components/: discloud.rs  fab.rs  mod.rs  social.rs
src/menus/modals/: ban.ts  delete-message.ts  kick.ts  timeout.ts
src/menus/moderate/: ban-menu.ts  ban.rs  close-menu.ts  close.rs  delete-message-menu.ts  kick-menu.ts  kick.rs  load-menu.ts  load.rs  message_delete.rs  mod.rs  timeout-menu.ts  timeout.rs
src/models/: mod.rs  skia.rs
src/settings/: assets.rs  discordjs.ts  env.rs  env.schema.ts  env.ts  global.rs  index.ts  logger.rs  malloc.rs  mod.rs  player.ts
src/tools/: automod.rs  automod.ts  discloud.rs  discloud.ts  discordui.ts  gemini.rs  gemini.ts  index.ts  mod.rs
src/utils/: cdn.rs  components.rs  embeds.rs  global.rs  interaction.rs  logger.rs  malloc.rs  mod.rs  skia.rs
(+10 files in other folders)
