[package]
name = "Bangboo"
version = "0.4.2"
edition = "2024"

[profile.release]
opt-level = 0
debug = false
split-debuginfo = "packed"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", features = ["collector", "model"] }
async-trait = { version = "0.1" }
anyhow = { version = "1.0" }
colored = { version = "3" }
discloud-rs = { git = "https://github.com/Cesio137/discloud-rs.git", branch = "main" }
dotenvy = { version = "0.15" }
genai = { version = "0.3.5"}
once_cell = { version = "1.21" }
regex = { version = "1.11" }
reqwest = { version = "0.12" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
skia-safe = { version = "0.88", features = ["textlayout"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
chrono = { version = "0.4" }